# task-tracker

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  configuration.json.example
configuration/: configuration.json.example
fuzz/: CMakeLists.txt
fuzz/corpus/fuzz_web_server_https_request/: slash_acdisplayserverwebsocket.txt  slash_length_100.txt
fuzz/corpus/fuzz_web_server_https_url/: slash_acdisplayserverwebsocket.txt  slash_disconnect_icon_svg.txt  slash_length_100.txt  slash_some_javascript_js.txt  slash_unsupported_extension_exe.txt
fuzz/include/: gnutlsmm.h  gnutlsmm_request.h  tcp_connection.h
fuzz/src/: fuzz_webserver_https_request.cpp  fuzz_webserver_https_url.cpp  gnutlsmm_request.cpp  tcp_connection.cpp
include/: atom_feed.h  debug_fake_feed_entries_update_thread.h  feed_data.h  gitlab_api.h  https_socket.h  ip_address.h  json.h  poll_helper.h  random.h  ring_buffer.h  settings.h  task_tracker.h  task_tracker_thread.h  util.h  version.h  web_server.h  xml_string_writer.h
resources/: index.html  style.css
src/: atom_feed.cpp  debug_fake_feed_entries_update_thread.cpp  feed_data.cpp  gitlab_api.cpp  https_socket.cpp  ip_address.cpp  json.cpp  main.cpp  settings.cpp  task_tracker.cpp  task_tracker_thread.cpp  util.cpp  web_server.cpp  xml_string_writer.cpp
test/configuration/: configuration.json
test/data/: configuration.json  feed.xml
test/include/: gnutlsmm.h
test/src/: feed_atom_test.cpp  gnutlsmm.cpp  main.cpp  ring_buffer_test.cpp  settings_test.cpp  util_test.cpp  webserver_https_test.cpp
